--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-redux": "^7.2.2",
+    "react-scripts": "4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
