--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "cw-web",
+  "name": "@awolyniec/cw-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "extend": "^3.0.2",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
